public/stylesheets/style.css
body {
  font-family: 'Rubik', Helvetica, Arial, sans-serif;
  font-size: 14px;
  padding: 0;
  margin: 0;
  color: #231F20;
  background: #f3f2ef;
}

a {
  color: #00B7FF;
}

header {
  background: #F04C53;
  color: #fff;
  transition: all 0.1s;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding-top: 10px;
  transition: all 0.1s;
}

header h1 {
   min-width: 259px;
   padding-left: 50px;
   padding-bottom: 10px;
}

header h1 a {
  text-decoration: none;
  color: white;
  text-shadow: 2px 2px #9e0b0b;
}

.totals-container {
   min-width: 236px;
   padding-bottom: 10px;
   position: relative;
}

.totals-ribbon-box {
  position: absolute;
    width: 100%;
    background: #ef7a7f;
    top: -45px;
    left: 0;
    height: 130px;
    padding-bottom: 50px;
    padding-top: 0;
    display: flex;
    justify-content: space-evenly;
    align-items: flex-end;
}

.totals-ribbon-box:after {
   content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    width: 0;
    height: 0;
    border-left: 120px solid transparent;
    border-right: 120px solid transparent;
    border-bottom: 30px solid #f3f2ef;
    clear: both;
}

.ribbon-container {
  position: absolute;
  z-index: 999;
  left: -15px;
  top: -30px;
}

.ribbon {
     width: 267px;
     position: absolute;
     text-align: center;
     font-size: 16px !important;
     background: #ffa944;
     box-shadow: rgba(0,0,0,0.3) 0 0 0;
     font-family: 'Helvetica Neue',Helvetica, sans-serif;
}

.ribbon p {
     font-size: 14px;
     color: #FFFFFF;
     margin:0px;
     padding: 10px 10px;
}

.ribbon:before, .ribbon:after {
     content: '';
     position: absolute;
     display: block;
     bottom: -1em;
     border: 1em solid #c2663a;
     z-index: -1;
}

.ribbon:before {
     left: -1.5em;
     border-right-width: 1.5em;
     border-left-color: transparent;
}

.ribbon:after {
     right: -1.5em;
     border-left-width: 1.5em;
     border-right-color: transparent;
}

.ribbon .ribbon-content:before, .ribbon .ribbon-content:after {
     border-color: #705A10 transparent transparent transparent;
     position: absolute;
     display: block;
     border-style: solid;
     bottom: -1em;
     content: '';
}

.ribbon .ribbon-content:before {
     left: 0;
     border-width: 1em 0 0 1em;
}

.ribbon .ribbon-content:after {
     right: 0;
     border-width: 1em 1em 0 0;
}


.movies-count {
    display: block;
    padding: 7px 10px;
    background: #fff;
    color: #77070c;
    margin-top: 5px;
    border-radius: 2px;
    font-weight: 300;
}

.totals-user {
    text-align: center;
    font-size: 16px;
    font-weight: 700;
    color: #000;
}

.totals-ribbon-box > div:nth-of-type(1) {
  order: 1;
}
.totals-ribbon-box > div:nth-of-type(2) {
  order: 3;
}
.totals-ribbon-box > div:nth-of-type(3) {
  order: 2; 
}

.total-amount {
    text-align: center;
    font-size: 14px;
    color: #000;
}

.sticky {
  position: sticky;
  top: 0;
  z-index: 9999;
  box-shadow: 4px 6px 12px #bf868833;
}

.sticky .totals-container {
  display: none;
}

.sticky-totals-container {
  display: none;
  padding-bottom: 10px;
  margin-left: -50px;
}

.sticky .sticky-totals-container {
  display: flex;
}

.sticky + main {
  padding-top: 94px;
}

.sticky h1 {
  font-size: 1.5em;
  margin: 0;
}

.sticky .year-anchors {
  display: block;
}

.year-anchors {
  display: none;
  flex-basis: 100%;
  text-align: center;
  padding: 5px;
  opacity: .95;
    background: #F4797E;
    margin-top: 2px;
    color: #7d0208;
}

.year-anchors a {
    color: #56090c;
    text-decoration: none;
    padding: 5px;
    display: inline-block;
    font-weight: 700;
}

.sticky .picker {
  font-size: 1em;
  padding: .5rem 1rem;
}

.sticky-totals-user span {
  padding: 7px 10px;
    color: #fff;
    background: #77070c;
    border-radius: 2px;
     font-weight: 300;
  font-size: 18px;
  margin-left: 10px;
}

.sticky-totals-container > div {
  display: inline-block;
  color: #fff;
  margin-right: 20px;
  font-weight: 700;
}

.button-container {
  min-width: 168px;
  padding-right: 90px;
  padding-bottom: 10px;
}

.sticky .button-container {
  padding-right: 40px;
}

.picker {
    background-image: linear-gradient(to top left,#ffa944,#c3185f);
    color: #fff;
    display: inline-block;
    font-family: inherit;
    font-weight: 700;
    border: 0;
    border-radius: 8px;
    white-space: nowrap;
    padding: 1rem 1.5rem;
    line-height: 1.4;
    text-align: center;
    position: relative;
    text-decoration: none;
    font-size: 20px;
    cursor: pointer;
}

.picker:hover {
  background-image: none;
  background: #c3185f;
}

main {
  padding: 50px;
  /*margin-top: 75px;*/
  background: #f3f2ef;
  display: none;
}

h2 {
    padding-top: 120px;
    margin-top: -120px;
    -webkit-background-clip: content-box;
    background-clip: content-box;
}

.year-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-content: space-between;
  margin-bottom: 30px;
}

.year-heading {
  flex-basis: 100%;
}

.movie-container {
  flex: 0 0 auto;
  margin: 0 20px 30px 0;
  width: 28.5%;
  padding: 17px;
  border: 3px solid #fff;
  background: #fff;
  box-shadow: 4px 6px 12px #ab959633;
  position: relative;
}

.chosen-one {
  border: 3px solid #F4797E;
}


.movie-container:nth-of-type(3) {
  margin-right: 0;
}

.movie-poster {
  height: auto;
  max-width: 100%;
  min-height: 120px;
  max-height: 120px;
}

.movie-title {
  margin: 0 60px 7px 0;
  font-weight: bold;
  font-size:18px;
}

.trophy:after {
  content: '🏆';
  font-size: 14px;
  padding-left: 2px;
}

.movie-poster-container {
  display: inline-block;
  width: 25%;
  vertical-align: top;
  margin-right: 20px;
  position: relative;
  z-index: inherit;
}

.fa-youtube {
  position: absolute;
  background: white;
  color: #f04c53b8;
  border-radius: 0 50% 0 0;
  font-size: 18px;
  padding: 6px 8px;
  bottom: -1px;
  left: -9px;
}

.fa-youtube:hover {
  color: #F04C53;
}

.movie-content-container {
  display: inline-block;
  width: 65%;
  vertical-align: top;
}

.imdb-container {
  display:block;
  color: #8C8989;
  margin-bottom: 25px;
}

.imdb-rating {
  font-weight: 300;
  font-size: 14px;
}

.user-container {
   display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-content: space-between;
}

.movie-content-container > div:nth-of-type(3) {
  margin-bottom: 10px;
}

.chevron {
  float: right;
  height: 20px;
  width: 20px;
  margin: 10px;
  margin-left: 20px;
  opacity: 0.8;
}

.chevron:hover {
 cursor: pointer;
 opacity: 1;
}

.chevron:after {
  font-family: 'fontawesome';
  content: "\f078";
  font-size: 22px;
  color: #F4797E;
}

#filterChevron:after {
  content: "\f160";
  color: #231F20;
}

.chevron-active:after {
  content: "\f077";
  color: #F04C53;
}

#filters {
  margin-left: 10px;
  margin-bottom: 10px;
  padding: 50px 100px;
}

#filterChevron {
  display: block;
  width: auto;
}

#filtersPanel {
  text-align: left;
    display: flex;
    background: rgb(76, 73, 73);
    color: rgb(255, 255, 255);
    padding: 40px;
    margin-top: 70px;
    flex-wrap: wrap;
    justify-content: space-around;
    display: none;
}

.filter-item {
  width: 30%;
  margin-bottom: 20px;
}

.filter-item p {
  font-weight: 700;
  font-size: 16px;
}

.panel {
    display: none;
    overflow: hidden;
    line-height: 1.3;
    box-shadow: 0px 12px 10px #79797959;
    background: white;
    margin: -5px 0 25px 0;
    z-index: 9;
    position: absolute;
    top: 90px;
    padding: 0 20px 10px 135px;
    left: 0;
    width: 60.57%;
    margin-left: -3px;
    border: 3px solid white;
}

.chosen-one .panel {
   border: 3px solid #ea6671;
   border-top: 0;
}

.panel > p:first-of-type {
  color: #8c8989;
  border-top: 1px solid #f3f2ef;
  padding-top: 20px;
}

.movie-detail-label {
  font-weight: 700;
}


.user-info {
  font-size: 22px;
  vertical-align: middle;
}

.user-name {
  width: 70px;
  font-size: 16px;
  line-height: 28px;
  color: #8C8989;
}

.checkbox-custom, .radio-custom {
    opacity: 0;
    position: absolute;   
}

.checkbox-custom, .checkbox-custom-label, .radio-custom, .radio-custom-label {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
}

.read-only .checkbox-custom, .read-only .checkbox-custom-label, .radio-custom, .read-only .radio-custom-label {
    cursor: default;
}

.checkbox-custom-label, .radio-custom-label {
    position: relative;
    font-family: 'fontawesome';
    color: #e6e6e3;
    opacity: 0.7;
}

.checkbox-custom-label:hover, .radio-custom-label:hover {
  opacity: 1;
}

.checkbox-custom + .checkbox-custom-label:before, 
.radio-custom + .radio-custom-label:before {
    display: inline-block;
    vertical-align: middle;
    width: 28px;
    height: 28px;
    text-align: center;
}

.user-check {
  margin-right: 20px;
}

.checkbox-custom + .check-label:before {
    content: "\f070";
}

.checkbox-custom:checked + .check-label:before {
    content: "\f06e";
    color: #63dcc1;
}

.user-smile {
  margin-right: 5px;
}

.radio-custom + .smile-label:before {
    content: "\f164";
}

.radio-custom:checked + .smile-label:before {
    content: "\f164"; 
    color: #4c7ef0;
}

.user-frown {
  margin-right: 20px;
}

.radio-custom + .frown-label:before {
    content: "\f165";
}

.radio-custom:checked + .frown-label:before {
    content: "\f165"; 
    color: #4c7ef0;
}

.checkbox-custom + .skip-label:before {
    content: "\f03d";

}

.checkbox-custom:checked + .skip-label:before {
    content: "\f4e2";
    color: #38364e;
}

footer {
  background: #FBD2D4;
  color: #F04C53;
  text-align: center;
  font-size: 16px;
  padding: 50px 50px 70px 50px;
  display: none;
}

footer a {
  color: #c3185f;
}

.fa-github {
  color: #231F20;
}

#responsive {
  display: none;
}

@media only screen and (max-width: 1220px) {

}

#ajaxLoader{
  margin: 0px auto;
  display: block;
}

#filtersNav {
  text-align: right;
  font-weight: 700;
  font-size: 18px;
}

input[type=range] {
  -webkit-appearance: none;
  margin: 10px;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 5px;
  cursor: pointer;
  animate: 0.2s;
  box-shadow: 0px 0px 0px #000000;
  background: #cccccc;
  border-radius: 1px;
  border: 0px solid #000000;
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 0px 0px 1px #000000;
  border: 0px solid #CCCCCC;
  height: 18px;
  width: 18px;
  border-radius: 25px;
  background: #FFFFFF;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -6.5px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #EDEDED;
}

.filter-reset {
  flex-basis: 100%;
  text-align: center;
}

.reset-button {
  font-family: 'Rubik', Helvetica, Arial, sans-serif;
    border: 0;
    background: #231F20;
    color: white;
    text-transform: uppercase;
    padding: 10px;
    margin-top: 10px;
    cursor: pointer;
}

.reset-button:focus {
  outline: none;
}

